[gd_scene load_steps=18 format=3 uid="uid://ck8dje7r6rv2v"]

[ext_resource type="Script" path="res://scripts/turretA.gd" id="1_nie2t"]
[ext_resource type="PackedScene" uid="uid://c2twdt5wi8ga3" path="res://scenes/BasePlate.tscn" id="2_kvinj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xmola"]
albedo_color = Color(0.52549, 0.52549, 0.52549, 1)
metallic = 0.8
roughness = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_54vyq"]
albedo_color = Color(0.52549, 0.52549, 0.52549, 1)
metallic = 0.8
roughness = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_15smt"]
albedo_color = Color(0.52549, 0.52549, 0.52549, 1)
metallic = 0.8
roughness = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rilpb"]
albedo_color = Color(0.52549, 0.52549, 0.52549, 1)
metallic = 0.8
roughness = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cw6pr"]
albedo_color = Color(0.525101, 0.525101, 0.525101, 1)
metallic = 0.7
roughness = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_enqys"]
albedo_color = Color(0.758192, 0.758192, 0.758192, 1)
metallic = 0.8
roughness = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c7qhf"]
albedo_color = Color(0.756863, 0.756863, 0.756863, 1)
metallic = 0.8
roughness = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yj1hk"]
metallic = 0.8
roughness = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6x0qn"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.027451)
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 5.34

[sub_resource type="CylinderMesh" id="CylinderMesh_l1xwi"]
material = SubResource("StandardMaterial3D_6x0qn")
top_radius = 0.1
height = 20.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_www02"]
albedo_color = Color(0.775063, 0.775063, 0.775063, 1)
metallic = 1.0
roughness = 0.3
clearcoat_enabled = true
clearcoat = 0.7
clearcoat_roughness = 0.2

[sub_resource type="CylinderMesh" id="CylinderMesh_h85t6"]
material = SubResource("StandardMaterial3D_www02")
top_radius = 0.7
bottom_radius = 0.7
height = 0.2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hocs4"]
height = 0.2
radius = 0.7

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_227vo"]
radius = 20.0
height = 40.0

[sub_resource type="BoxShape3D" id="BoxShape3D_v0tku"]
size = Vector3(2, 2, 2)

[node name="Turret" type="Node3D"]
script = ExtResource("1_nie2t")

[node name="body" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0892361, 0)

[node name="MiddleMount" type="CSGPolygon3D" parent="body"]
transform = Transform3D(0.476191, 0, 0, 0, -2.08149e-08, -0.476191, 0, 0.476191, -2.08149e-08, -0.00070858, 0.113718, -0.348518)
polygon = PackedVector2Array(0, 0, 1.2, 0, 1, 0.8, 0.8, 1.5, 0, 1.5, -0.8, 1.5, -1, 0.8, -1.2, 0)
material = SubResource("StandardMaterial3D_xmola")

[node name="CSGBox3D" type="CSGBox3D" parent="body/MiddleMount"]
transform = Transform3D(1, 0, 0, 0, 0.344936, -0.938624, 0, 0.938624, 0.344936, 0, 1.19281, -0.454315)
size = Vector3(1.6, 0.8, 1)
material = SubResource("StandardMaterial3D_54vyq")

[node name="LeftSupport" type="CSGBox3D" parent="body/MiddleMount"]
transform = Transform3D(3.33333, 0, 0, 0, -1.45705e-07, 3.33333, 0, -3.33333, -1.45705e-07, -0.813288, 0.812605, -1.79175)
size = Vector3(0.1, 0.5, 0.2)
material = SubResource("StandardMaterial3D_15smt")

[node name="RightSupport" type="CSGBox3D" parent="body/MiddleMount"]
transform = Transform3D(3.33333, 0, 0, 0, -1.45705e-07, 3.33333, 0, -3.33333, -1.45705e-07, 0.813333, 0.812605, -1.79149)
size = Vector3(0.1, 0.5, 0.2)
material = SubResource("StandardMaterial3D_15smt")

[node name="head" type="Node3D" parent="body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.21419, 0)

[node name="Mount" type="CSGBox3D" parent="body/head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.000395119, -0.000154495)
size = Vector3(0.3, 0.2, 0.5)
material = SubResource("StandardMaterial3D_rilpb")

[node name="holder" type="CSGBox3D" parent="body/head/Mount"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.103044)
size = Vector3(0.3, 0.2, 0.503906)
material = SubResource("StandardMaterial3D_rilpb")

[node name="barrel3" type="CSGCylinder3D" parent="body/head/Mount/holder"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.280203)
radius = 0.051
height = 0.397
material = SubResource("StandardMaterial3D_cw6pr")

[node name="barrel2" type="CSGCylinder3D" parent="body/head/Mount/holder/barrel3"]
transform = Transform3D(1, 0, 0, 0, 1, 3.55271e-15, 0, -3.55271e-15, 1, 0.00352621, 0.272683, -0.00259739)
radius = 0.044
height = 0.635
material = SubResource("StandardMaterial3D_enqys")

[node name="barrel" type="CSGCylinder3D" parent="body/head/Mount/holder/barrel3/barrel2"]
transform = Transform3D(1, 0, 0, 0, 1, 1.06581e-14, 0, -1.06581e-14, 1, -0.00129986, 0.245199, -9.34601e-05)
radius = 0.028
height = 0.5
material = SubResource("StandardMaterial3D_c7qhf")

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="body/head/Mount/holder/barrel3/barrel2/barrel"]
operation = 2
radius = 0.016
height = 0.5

[node name="TrunnionMount" type="Node3D" parent="body/head/Mount"]

[node name="LeftTrunnion" type="CSGCylinder3D" parent="body/head/Mount/TrunnionMount"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.163096, 0, 0)
radius = 0.079
height = 0.3
material = SubResource("StandardMaterial3D_yj1hk")

[node name="RightTrunnion" type="CSGCylinder3D" parent="body/head/Mount/TrunnionMount"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.163, 0, 0)
radius = 0.079
height = 0.3
material = SubResource("StandardMaterial3D_yj1hk")

[node name="projectile_spawn_marker" type="Marker3D" parent="body/head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.14488)

[node name="flash_light" type="Node3D" parent="body/head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.489141, 0)

[node name="cone_vision" type="MeshInstance3D" parent="body/head/flash_light"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.479358, 9.754)
mesh = SubResource("CylinderMesh_l1xwi")
skeleton = NodePath("../../../../../../..")

[node name="projectile_spawn_marker2" type="Marker3D" parent="body/head"]
transform = Transform3D(1.66667, 0, 0, 0, 1.66667, 0, 0, 0, 1.66667, 0, 0, 0)

[node name="rotationdisk" type="StaticBody3D" parent="body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.17379, 0)

[node name="rotasiondisk" type="MeshInstance3D" parent="body/rotationdisk"]
mesh = SubResource("CylinderMesh_h85t6")
skeleton = NodePath("../../Baseplate")

[node name="CollisionShape3D" type="CollisionShape3D" parent="body/rotationdisk"]
shape = SubResource("CylinderShape3D_hocs4")

[node name="DetectionArea" type="Area3D" parent="."]

[node name="detection_area" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("CapsuleShape3D_227vo")

[node name="BasePlate" parent="." instance=ExtResource("2_kvinj")]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)

[node name="StaticBody3D" type="StaticBody3D" parent="."]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.977463, 0.0920972)
shape = SubResource("BoxShape3D_v0tku")

[node name="Area3D" type="Area3D" parent="StaticBody3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.977463, 0.0920972)
shape = SubResource("BoxShape3D_v0tku")

[connection signal="body_entered" from="StaticBody3D/Area3D" to="." method="_on_area_3d_body_entered"]
